<resources>
    <string name="app_name">Handball Coach</string>

    <!--New Game-->
    <string name="main_new_game_button">Spielansicht</string>
    <!--New Game-Angriff-->
    <string name="new_game_attack_title">Angriff</string>
    <string name="new_game_attack_front_left_button">Vorne Links:</string>
    <string name="new_game_attack_front_mid_button">Vorne Mitte:</string>
    <string name="new_game_attack_front_right_button">Vorne Rechts:</string>
    <string name="new_game_attack_back_left_button">Hinten Links:</string>
    <string name="new_game_attack_back_mid_button">Hinten Mitte:</string>
    <string name="new_game_attack_back_right_button">Hinten Rechts:</string>
    <!--New Game-Technical-->
    <string name="new_game_technical_title">Technische Fehler</string>
    <string name="new_game_technical_double">Doppel Fehler:</string>
    <string name="new_game_technical_step">Schritt Fehler:</string>
    <string name="new_game_technical_catch">Fang Fehler:</string>
    <!--New Game-Verteidigung-->
    <string name="new_game_defense_title">Verteidigung</string>
    <string name="new_game_defense_front_left_button">Vorne Links:</string>
    <string name="new_game_defense_front_mid_button">Vorne Mitte:</string>
    <string name="new_game_defense_front_right_button">Vorne Rechts:</string>
    <string name="new_game_defense_back_left_button">Hinten Links:</string>
    <string name="new_game_defense_back_mid_button">Hinten Mitte:</string>
    <string name="new_game_defense_back_right_button">Hinten Rechts:</string>
    <!--New Game-Save-->
    <string name="new_game_save_title">Spiel speichern</string>
    <string name="new_game_save_text">Spielname:</string>
    <string name="new_game_save_name"></string>
    <string name="new_game_save_game_name">z.B. TV Sarnen vs. HC Kriens</string>
    <string name="new_game_save_button">Speichern</string>
    <string name="new_game_reset_button">Zurücksetzen</string>

    <!--Statistics-->
    <string name="main_statistics_button">Spiel Statistik</string>
    <!--Statistics-Select-->
    <string name="statistics_select_game_title">Spiel auswählen</string>
    <string name="statistics_spinner">Spiel auswählen</string>
    <!--Statistics-Show-->
    <string name="statistics_show_title">Spielname: </string>
    <string name="statistics_show_attack_front_left">Angriff Vorne Links:</string>
    <string name="statistics_show_attack_front_mid">Angriff Vorne Mitte:</string>
    <string name="statistics_show_attack_front_right">Angriff Vorne Rechts:</string>
    <string name="statistics_show_attack_back_left">Angriff Hinten Links:</string>
    <string name="statistics_show_attack_back_mid">Angriff Hinten Mitte:</string>
    <string name="statistics_show_attack_back_right">Angriff Hinten Rechts:</string>
    <string name="statistics_technical_double">Doppel Fehler:</string>
    <string name="statistics_technical_step">Schritt Fehler:</string>
    <string name="statistics_technical_catch">Fang Fehler:</string>
    <string name="statistics_show_defense_front_left">Verteidigung Vorne Links:</string>
    <string name="statistics_show_defense_front_mid">Verteidigung Vorne Mitte:</string>
    <string name="statistics_show_defense_front_right">Verteidigung Vorne Rechts:</string>
    <string name="statistics_show_defense_back_left">Verteidigung Hinten Links:</string>
    <string name="statistics_show_defense_back_mid">Verteidigung Hinten Mitte:</string>
    <string name="statistics_show_defense_back_right">Verteidigung Hinten Rechts:</string>
    <!--Statistics-Delete-->
    <string name="statistics_delete_game">Spiel Löschen</string>

    <!--Preferences-->
    <string name="main_preferences_button">Einstellungen</string>
    <!--Preferences-Language-->
    <string name="preferences_language_category_title">Spracheinstellungen</string>
    <string name="preferences_language_list">Sprache</string>
    <!--Preferences-Theme-->
    <string name="preferences_dark_mode_category_title">Dark Mode Einstellungen</string>
    <string name="preferences_dark_mode_list">Design</string>
</resources>